--- a/Timesheet.Storage/Timesheet.Storage.csproj
+++ b/Timesheet.Storage/Timesheet.Storage.csproj
@@ -73,10 +73,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Converters.cs" />
+    <Compile Include="Entities\EmployeeEntity.cs" />
     <Compile Include="Entities\ProjectEntity.cs" />
+    <Compile Include="Entities\TaskEntity.cs" />
+    <Compile Include="Entities\TimeRegistrationByEmployeeEntity.cs" />
+    <Compile Include="Entities\TimeRegistrationEntity.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TaskRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Timesheet.Domain\Timesheet.Domain.csproj">
