--- a/Timesheet.Storage/Timesheet.Storage.csproj
+++ b/Timesheet.Storage/Timesheet.Storage.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Entities\TimeRegistrationByEmployeeEntity.cs" />
     <Compile Include="Entities\TimeRegistrationEntity.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\EmployeeRepository.cs" />
     <Compile Include="Repositories\ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TaskRepository.cs" />
