--- a/Timesheet.Storage/Timesheet.Storage.csproj
+++ b/Timesheet.Storage/Timesheet.Storage.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Repositories\ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TaskRepository.cs" />
+    <Compile Include="Repositories\TimeRegistrationRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Timesheet.Domain\Timesheet.Domain.csproj">
