--- a/Timesheet.Api/Timesheet.Api.csproj
+++ b/Timesheet.Api/Timesheet.Api.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Employees\CreateEmployeeModel.cs" />
     <Compile Include="Models\Projects\CreateProjectModel.cs" />
     <Compile Include="Models\Tasks\CreateTaskModel.cs" />
     <Compile Include="Models\TimeRegistrations\CreateTimeRegistrationModel.cs" />
