--- a/Timesheet.STS/Web.config
+++ b/Timesheet.STS/Web.config
@@ -8,6 +8,9 @@
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
