--- a/Timesheet.App/Timesheet.App.csproj
+++ b/Timesheet.App/Timesheet.App.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Messages\InitializeRegistrationViewModelMessage.cs" />
     <Compile Include="Messages\LoadTasksMessage.cs" />
+    <Compile Include="Messages\TryLogonUsingVaultMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiService.cs" />
     <Compile Include="ViewModels\CreateRegistrationViewModel.cs" />
